# crt

./: .clang-format  .gitignore  Makefile  README.md  flake.nix  meson.build
nix/: default.nix  overlays.nix
src/: atuin.c  atuin.h  fish.c  fish.h  main.c  memplus.h  meson.build  prog.h  utils.c  utils.h
